# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "iot-dashboard"
version = "1.6.0"
authors = ["Slint Developers <info@slint.dev>"]
edition = "2021"
publish = false
license = "MIT"

[[bin]]
path = "main.rs"
name = "iot-dashboard"

[dependencies]
slint = { path = "../../../api/rs/slint" }
